# paviewer

./: .gitignore  CLAUDE.md  DEVELOPMENT_ROADMAP.md  README.md  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.md
backend/app/: database.py  main.py
backend/app/api/: market_data.py
backend/app/models/: market_data.py
backend/app/services/: data_cache.py  market_data.py
data/: paviewer.db
docker/: Dockerfile.backend
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js  style.css
tests/: conftest.py
tests/unit/: test_api_market_data.py  test_data_cache.py  test_main.py  test_market_data.py  test_models.py
